src/styles/_angular-material.scss
@import '../../node_modules/angular-material/angular-material.scss';
@import url(https://fonts.googleapis.com/icon?family=Material+Icons);

.material-icons {
	
	&.md-18 { font-size: 18px; }
	&.md-24 { font-size: 24px; }
	&.md-36 { font-size: 36px; }
	&.md-48 { font-size: 48px; }
	
	.md-dark {
		color: rgba(0, 0, 0, 0.54);
		.md-inactive { color: rgba(0, 0, 0, 0.26); }
	}
	
	.md-light {
		color: rgba(255, 255, 255, 1);
		.md-inactive { color: rgba(255, 255, 255, 0.3); }
	}
	
}

.hint {
    font-size: 12px;
    line-height: 14px;
    color: grey;
}

